# namscripts

./: README.md  pyproject.toml
src/namscripts/: main.py
src/namscripts/resources/: __init__.py  tensorlogs.bat
src/namscripts/resources/configs/: nam_default.json
