[project]
name = "namscripts"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "danimaetrix", email = "vossen.dm@gmail.com"},
]
dependencies = [
    "requests",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
